styles.css
:root {
  --title-font: "Bitcount Single";
  --shadow: 2px 3px 8px rgba(0, 0, 0, 0.2);
  --primary-color: rgb(209, 159, 40);
  --secondary-color: rgb(255, 255, 255);
  --ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
  --ease-in: cubic-bezier(0.75, 0, 1, 1);
  --ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
  --ease: cubic-bezier(0.44, 0.21, 0, 1);
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
}

body {
  min-height: 100vh;
  position: relative;
  isolation: isolate;
}

.background-decoration {
  background: linear-gradient(rgb(255, 255, 255), var(--primary-color));
  width: 100vw;
  min-height: 25vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  transform-origin: bottom;
  transform: rotate(6deg) scale(3);
  box-shadow: var(--shadow);
}

main {
  max-width: 1000px;
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 50px;
  padding: 100px 70px;
}

/* SHARED */

h1,
h2 {
  font-family: var(--title-font);
}

ul {
  list-style: none;
  padding-left: 0;
}

.about .icons,
.project-cards .icons {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
}

.icon {
  will-change: transform;
  transition: transform 500ms var(--ease-out);
}

.icon:hover {
  cursor: pointer;
  transform: rotate(10deg);
}

/* HEADER */

.about {
  display: flex;
  align-items: center;
}

.about-img-container {
  position: relative;
  display: flex;
  justify-content: center;
  min-width: 400px;
}

.about-img-container img {
  object-fit: cover;
  box-shadow: var(--shadow);
}

@media (hover: hover) {
  .about-img-container img {
    transition: transform 100ms;
  }
  @keyframes idle-animation {
    0% {
      transform: rotate(1deg);
    }
    100% {
      transform: rotate(-1deg);
    }
  }

  .about-img-container img:hover {
    transform: rotate(1deg);
    animation: idle-animation 200ms infinite alternate var(--ease-in-out);
    animation-delay: 100ms;
  }
}

.about-img-container h1 {
  bottom: 0;
  position: absolute;
  color: white;
  font-family: var(--title-font);
  font-size: 3rem;
  text-shadow: 1px 1px 5px black;
}

.about-description {
  background-color: white;
  box-shadow: var(--shadow);
  padding: 20px;
}

.about-description p {
  padding: 10px 0 20px;
}

/* PROJECTS */

.project-cards {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 30px;
  margin: 20px 0;
}
.project-cards .card {
  background-color: white;
  box-shadow: var(--shadow);
  will-change: transform;
  transition: transform 400ms var(--ease-out);
}

.project-cards .card:hover {
  background-color: white;
  box-shadow: var(--shadow);
  transform: scale(1.02);
  cursor: pointer;
}

.project-cards .project-image {
  min-height: 250px;
  background-image: url(./images/orange-gradient.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.project-cards .overview {
  padding: 20px 20px 50px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.project-cards .title {
  display: flex;
  justify-content: space-between;
}

/* FOOTER */

footer {
  /* box-shadow: var(--shadow); */
  background: linear-gradient(white, white, rgb(177, 174, 174));
}

.contact-me {
  max-width: 1200px;
  display: flex;
  margin: auto;
  padding: 50px;
  justify-content: space-between;
  align-items: center;
  gap: 50px;
}

.contact-me picture {
  flex: 2;
}

.contact-me .contact-image {
  min-width: 50%;
  box-shadow: var(--shadow);
  object-fit: cover;
}

.contact-me .contact-info {
  min-width: 30%;
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 20px;
}

.contact-me .contact-info li {
  display: flex;
  gap: 10px;
  padding: 5px 0;
}

.contact-me .icons {
  display: flex;
  justify-content: flex-start;
  gap: 10px;
}

/* MEDIA QUERIES */

@media (min-width: 601px) and (max-width: 1000px) {
  .about {
    display: block;
  }

  .about-description {
    padding-top: 50px;
  }

  .about-img-container {
    display: block;
    float: left;
    min-width: 100px;
    max-width: 300px;
    margin: -30px -10px;
    transform: translate(-25px, -30px);
  }

  .about-img-container h1 {
    position: absolute;
    top: 0;
    right: -125px;
  }
}

@media (max-width: 600px) {
  main {
    padding: 20px;
  }

  .about {
    display: flex;
    flex-direction: column;
  }

  .about-img-container {
    min-width: 100px;
  }

  .about .icons {
    justify-content: center;
  }

  .contact-me .icons {
    align-self: center;
  }

  .contact-me {
    flex-direction: column;
    padding: 0;
  }

  .contact-info {
    padding: 20px 20px 0;
  }
}

